fixed pre-commit hook

--- a/docs/notebooks/solutions/bank.ipynb
+++ b/docs/notebooks/solutions/bank.ipynb
@@ -1078,11 +1078,39 @@
    "source": [
     "## Esercizio Finale\n",
     "Completiamo il puzzle\n",
-    "1. Calcolare il saldo al 31/12/23 per ciascun cliente `outstanding_eoy_customer`.\n",
-    "2. Mostrare a video i nomi dei clienti che hanno utilizzato il servizio di scoperto e i mesi in cui lo hanno fatto.\n",
-    "3. Calcolare i ricavi totali per cliente `tot_rev_on_customer` come la somma di tutte le commissioni applicate per il conto e per gli scoperti.\n",
-    "4. Calcolare i ricavi complessivi della banca `tot_rev_bank`.\n",
-    "5. Calcolare i ricavi totali per cliente rapportati al loro saldo al 31/12/23 `tot_rev_on_customer_over_eoy_outstanding`.\n"
+    "1. Calcolare il saldo al 31/12/23 per ciascun cliente `outstanding_eoy_customer`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85284b1c",
+   "metadata": {},
+   "source": [
+    "2. Mostrare a video i nomi dei clienti che hanno utilizzato il servizio di scoperto e i mesi in cui lo hanno fatto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e54fcb82",
+   "metadata": {},
+   "source": [
+    "3. Calcolare i ricavi totali per cliente `tot_rev_on_customer` come la somma di tutte le commissioni applicate per il conto e per gli scoperti."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "827303d5",
+   "metadata": {},
+   "source": [
+    "4. Calcolare i ricavi complessivi della banca `tot_rev_bank`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d709117b",
+   "metadata": {},
+   "source": [
+    "5. Calcolare i ricavi totali per cliente rapportati al loro saldo al 31/12/23 `tot_rev_on_customer_over_eoy_outstanding`."
    ]
   },
   {
