--- a/docs/notebooks/exercises/bank.ipynb
+++ b/docs/notebooks/exercises/bank.ipynb
@@ -69,10 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6f871751",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to STEM Bank\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c462cee5",
    "metadata": {},
    "outputs": [],
@@ -101,10 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "22086c0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I conti tornano!\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -118,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "103f2c13",
    "metadata": {},
    "outputs": [],
@@ -134,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "69b981ba",
    "metadata": {},
    "outputs": [],
@@ -150,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0afd5b36",
    "metadata": {},
    "outputs": [],
@@ -166,26 +182,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "52ded9a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transazioni di Mario: [-421.25, 745.9, 973.55, 531.63, 75.87, 176.36, 259.23, 476.32, -236.5, 627.68, -148.15, 190.61]\n",
+      "Transazioni di Alessia: [-102.39, 682.74, 569.29, 454.78, 425.75, 670.16, 377.63, 685.67, -519.01, -588.8, 472.06, -376.6]\n",
+      "Transazioni di Anita: [-909.32, -327.46, -955.23, -28.0, 570.94, -579.58, -907.37, 463.82, -884.4, -36.13, 442.25, 564.15]\n",
+      "Transazioni di Csaba: [-473.19, -603.22, -709.94, 91.29, -333.65, -392.82, -508.57, 366.83, -719.18, -470.39, -689.06, -757.81]\n",
+      "Transazioni di Ron: [190.17, -265.48, -838.06, 754.74, 607.53, 410.96, -631.51, 428.44, 80.41, -256.97, 689.3, 760.45]\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "{'Mario': [-421.25, 745.9, 973.55, 531.63, 75.87, 176.36, 259.23, 476.32, -236.5, 627.68, -148.15, 190.61], 'Alessia': [-102.39, 682.74, 569.29, 454.78, 425.75, 670.16, 377.63, 685.67, -519.01, -588.8, 472.06, -376.6], 'Anita': [-909.32, -327.46, -955.23, -28.0, 570.94, -579.58, -907.37, 463.82, -884.4, -36.13, 442.25, 564.15], 'Csaba': [-473.19, -603.22, -709.94, 91.29, -333.65, -392.82, -508.57, 366.83, -719.18, -470.39, -689.06, -757.81], 'Ron': [190.17, -265.48, -838.06, 754.74, 607.53, 410.96, -631.51, 428.44, 80.41, -256.97, 689.3, 760.45]}\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fde10318",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alessia': [249.53,\n",
+      "             -643.49,\n",
+      "             286.27,\n",
+      "             -735.3,\n",
+      "             -534.08,\n",
+      "             -855.18,\n",
+      "             33.18,\n",
+      "             883.6,\n",
+      "             395.3,\n",
+      "             515.54,\n",
+      "             -833.21,\n",
+      "             -674.27],\n",
+      " 'Anita': [-702.53,\n",
+      "           -9.25,\n",
+      "           953.72,\n",
+      "           463.7,\n",
+      "           413.27,\n",
+      "           -128.41,\n",
+      "           -627.02,\n",
+      "           -787.64,\n",
+      "           -451.36,\n",
+      "           345.74,\n",
+      "           739.67,\n",
+      "           543.53],\n",
+      " 'Csaba': [122.49,\n",
+      "           -728.36,\n",
+      "           -86.94,\n",
+      "           164.82,\n",
+      "           -321.3,\n",
+      "           -577.95,\n",
+      "           -114.06,\n",
+      "           -925.68,\n",
+      "           935.22,\n",
+      "           -56.07,\n",
+      "           411.8,\n",
+      "           96.77],\n",
+      " 'Mario': [770.59,\n",
+      "           -891.52,\n",
+      "           166.61,\n",
+      "           90.17,\n",
+      "           250.4,\n",
+      "           -658.62,\n",
+      "           -676.23,\n",
+      "           -265.12,\n",
+      "           607.89,\n",
+      "           968.22,\n",
+      "           -60.88,\n",
+      "           208.53],\n",
+      " 'Ron': [-408.37,\n",
+      "         -750.03,\n",
+      "         -943.28,\n",
+      "         -305.31,\n",
+      "         -725.04,\n",
+      "         301.15,\n",
+      "         -624.72,\n",
+      "         -98.04,\n",
+      "         721.6,\n",
+      "         -477.71,\n",
+      "         299.56,\n",
+      "         -575.71]}\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6eec90ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alessia': [-498.0,\n",
+      "             737.5,\n",
+      "             -26.34,\n",
+      "             820.95,\n",
+      "             654.52,\n",
+      "             787.26,\n",
+      "             714.67,\n",
+      "             -526.95,\n",
+      "             767.2,\n",
+      "             -433.41,\n",
+      "             105.68,\n",
+      "             -840.02],\n",
+      " 'Anita': [-282.25,\n",
+      "           -337.22,\n",
+      "           -336.92,\n",
+      "           -519.13,\n",
+      "           -865.21,\n",
+      "           -289.19,\n",
+      "           459.8,\n",
+      "           314.33,\n",
+      "           449.18,\n",
+      "           -289.79,\n",
+      "           -889.92,\n",
+      "           -340.18],\n",
+      " 'Csaba': [265.27,\n",
+      "           643.21,\n",
+      "           -686.8,\n",
+      "           -451.06,\n",
+      "           -521.67,\n",
+      "           -16.63,\n",
+      "           -596.76,\n",
+      "           -639.27,\n",
+      "           -304.13,\n",
+      "           -909.63,\n",
+      "           -808.7,\n",
+      "           913.65],\n",
+      " 'Mario': [-497.39,\n",
+      "           163.86,\n",
+      "           307.37,\n",
+      "           630.63,\n",
+      "           -349.62,\n",
+      "           -280.19,\n",
+      "           155.17,\n",
+      "           909.71,\n",
+      "           -341.69,\n",
+      "           -215.43,\n",
+      "           208.24,\n",
+      "           -285.28],\n",
+      " 'Ron': [925.39,\n",
+      "         -640.12,\n",
+      "         -639.63,\n",
+      "         571.39,\n",
+      "         -889.59,\n",
+      "         758.02,\n",
+      "         553.14,\n",
+      "         -601.75,\n",
+      "         -523.54,\n",
+      "         240.8,\n",
+      "         -242.78,\n",
+      "         -811.89]}\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -208,10 +377,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ffa881ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mario non ha effettuato spese a Gennaio\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -224,10 +401,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c276772c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La somma delle transazioni di Alessia è positivia\n",
+      "La somma delle transazioni di Alessia è positiva\n",
+      "La somma delle transazioni di Alessia è positiva\n",
+      "La somma delle transazioni di Alessia è positiva\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -240,26 +428,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6d1913a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transazioni Mario Gennaio: -497.39 €\n",
+      "Transazioni Mario Febbraio: 163.86 €\n",
+      "Transazioni Mario Marzo: 307.37 €\n",
+      "Transazioni Mario Aprile: 630.63 €\n",
+      "Transazioni Mario Maggio: -349.62 €\n",
+      "Transazioni Mario Giugno: -280.19 €\n",
+      "Transazioni Mario Luglio: 155.17 €\n",
+      "Transazioni Mario Agosto: 909.71 €\n",
+      "Transazioni Mario Settembre: -341.69 €\n",
+      "Transazioni Mario Ottobre: -215.43 €\n",
+      "Transazioni Mario Novembre: 208.24 €\n",
+      "Transazioni Mario Dicembre: -285.28 €\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2346c799",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transazioni Mario Gennaio: -497.39 €\n",
+      "Transazioni Mario Febbraio: 163.86 €\n",
+      "Transazioni Mario Marzo: 307.37 €\n",
+      "Transazioni Mario Aprile: 630.63 €\n",
+      "Transazioni Mario Maggio: -349.62 €\n",
+      "Transazioni Mario Giugno: -280.19 €\n",
+      "Transazioni Mario Luglio: 155.17 €\n",
+      "Transazioni Mario Agosto: 909.71 €\n",
+      "Transazioni Mario Settembre: -341.69 €\n",
+      "Transazioni Mario Ottobre: -215.43 €\n",
+      "Transazioni Mario Novembre: 208.24 €\n",
+      "Transazioni Mario Dicembre: -285.28 €\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2ef0668a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transazioni Mario Gennaio: -497.39 €\n",
+      "Transazioni Mario Febbraio: 163.86 €\n",
+      "Transazioni Mario Marzo: 307.37 €\n",
+      "Transazioni Mario Aprile: 630.63 €\n",
+      "Transazioni Mario Maggio: -349.62 €\n",
+      "Transazioni Mario Giugno: -280.19 €\n",
+      "Transazioni Mario Luglio: 155.17 €\n",
+      "Transazioni Mario Agosto: 909.71 €\n",
+      "Transazioni Mario Settembre: -341.69 €\n",
+      "Transazioni Mario Ottobre: -215.43 €\n",
+      "Transazioni Mario Novembre: 208.24 €\n",
+      "Transazioni Mario Dicembre: -285.28 €\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -272,10 +517,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "abd62c0c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mese negativo\n",
+      "Transazioni Alessia Febbraio: 737.5 €\n",
+      "Mese negativo\n",
+      "Transazioni Alessia Aprile: 820.95 €\n",
+      "Transazioni Alessia Maggio: 654.52 €\n",
+      "Transazioni Alessia Giugno: 787.26 €\n",
+      "Transazioni Alessia Luglio: 714.67 €\n",
+      "Mese negativo\n",
+      "Transazioni Alessia Settembre: 767.2 €\n",
+      "Mese negativo\n",
+      "Transazioni Alessia Novembre: 105.68 €\n",
+      "Mese negativo\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -290,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a1768bc0",
    "metadata": {},
    "outputs": [],
@@ -306,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "dfd617ed",
    "metadata": {},
    "outputs": [],
@@ -322,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a9c6659d",
    "metadata": {},
    "outputs": [],
@@ -344,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a538bc5c",
    "metadata": {},
    "outputs": [],
@@ -360,10 +624,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "c60c08e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -376,10 +651,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b3e26604",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Commissioni mensili Mario (conto: Base): 0\n",
+      "Commissioni mensili Mario (conto: Premium): 4.0\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -389,17 +673,45 @@
    "source": [
     "## Esercizio Finale\n",
     "Completiamo il puzzle\n",
-    "1. Calcolare il saldo al 31/12/23 per ciascun cliente `outstanding_eoy_customer`.\n",
-    "2. Mostrare a video i nomi dei clienti che hanno utilizzato il servizio di scoperto e i mesi in cui lo hanno fatto.\n",
-    "3. Calcolare i ricavi totali per cliente `tot_rev_on_customer` come la somma di tutte le commissioni applicate per il conto e per gli scoperti.\n",
-    "4. Calcolare i ricavi complessivi della banca `tot_rev_bank`.\n",
-    "5. Calcolare i ricavi totali per cliente rapportati al loro saldo al 31/12/23 `tot_rev_on_customer_over_eoy_outstanding`.\n"
+    "1. Calcolare il saldo al 31/12/23 per ciascun cliente `outstanding_eoy_customer`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85284b1c",
+   "metadata": {},
+   "source": [
+    "2. Mostrare a video i nomi dei clienti che hanno utilizzato il servizio di scoperto e i mesi in cui lo hanno fatto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e54fcb82",
+   "metadata": {},
+   "source": [
+    "3. Calcolare i ricavi totali per cliente `tot_rev_on_customer` come la somma di tutte le commissioni applicate per il conto e per gli scoperti."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "827303d5",
+   "metadata": {},
+   "source": [
+    "4. Calcolare i ricavi complessivi della banca `tot_rev_bank`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d709117b",
+   "metadata": {},
+   "source": [
+    "5. Calcolare i ricavi totali per cliente rapportati al loro saldo al 31/12/23 `tot_rev_on_customer_over_eoy_outstanding`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9bce6f0",
+   "id": "ec4e1ba0",
    "metadata": {},
    "outputs": [],
    "source": []
